# python-necpp

./: .gitignore  .gitmodules  INSTALL.md  MANIFEST.in  Makefile  README.md  build.sh  build_wheels.sh  dev-requirements.txt  setup.py
.github/workflows/: build-necpp-wheels.yml  build-pynec-wheels.yml  build-wheels.yml
PyNEC/: .gitignore  CHANGES.md  INSTALL.md  MANIFEST.in  Makefile  PyNEC.i  README.md  build.sh  pyproject.toml  setup.cfg  setup.py
PyNEC/example/: Makefile  README.md  antenna_util.py  basic_usage.py  context_clean.py  dipole.py  logperiodic_opt.py  monopole.py  monopole_realistic_ground_plane.py  optimized.py  radiation_pattern.py  test_ai.py  test_charge_densities.py  test_ne_nh.py  test_nrp.py  test_rp.py  test_rp2.py  test_se.py  test_structure_currents.py  test_surface_patch_currents.py
PyNEC/interface_files/: c_geometry.i  math_util.i  nec_antenna_input.i  nec_context.i  nec_ground.i  nec_near_field_pattern.i  nec_norm_rx_pattern.i  nec_radiation_pattern.i  nec_structure_currents.i  nec_structure_excitation.i  safe_array.i
PyNEC/tests/: Makefile  test_charge_densities.py  test_examples.py  test_get_gain.py  test_input_parameters.py  test_near_field.py  test_norm_rx_pattern.py  test_patches.py  test_radiation_pattern.py  test_structure_currents.py  test_structure_excitation.py
PyNECPP/: .gitignore  README.md  setup.py
PyNECPP/example/: antenna_util.py  context_clean.py  monopole.py  monopole_realistic_ground_plane.py  test_ai.py
PyNECPP/interface_files/: nec_antenna_input.i  nec_context.i  nec_ground.i  nec_structure_excitation.i  safe_array.i
PyNECPP/tests/: test_examples.py
example/: README.md  impedance_plot.py  monopole.py  optimized.py
necpp/: .gitignore  INSTALL.md  MANIFEST.in  Makefile  README.md  __init__.py  build.sh  pyproject.toml  setup.py
necpp/example/: Makefile  README.md  antenna_util.py  different_material.py  impedance_plot.py  monopole.py  optimized.py
necpp/tests/: test_multiple_sc_cards.py
