# Copyright (c) 2008-2026 Tim Molteno (tim@elec.ac.nz)
[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "PyNEC"
version = "2.2.2"
description = "Python Antenna Simulation Module (nec2++) object-oriented interface"
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    { name = "Tim Molteno", email = "tim@physics.otago.ac.nz" },
]
keywords = ["nec2", "nec2++", "antenna", "electromagnetism", "radio"]
requires-python = ">=3.9"
dependencies = ["numpy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
    "Topic :: Communications :: Ham Radio",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
]

[project.urls]
Homepage = "http://github.com/tmolteno/python-necpp"
Repository = "http://github.com/tmolteno/python-necpp"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.setuptools]
include-package-data = true
py-modules = ["PyNEC"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
